--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,19 +1,14 @@
-<p id="notice"><%= notice %></p>
 
 <h1>Search tweets from user</h1>
+<%= form_tag "Tweet", method: "get", remote: true do %>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% end %>
 
-  <tbody>
+<ul>
     <% @tweets.each do |tweet| %>
+      <%= render partial: "tweet", locals: {tweet: tweet}%>
     <% end %>
-  </tbody>
-</table>
+</ul>
 
 <br>
 
