add some style to tweet view

--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,8 +1,8 @@
-<div class="list-group-item">
-  <p class="list-group-item-text pull-right">
+<div class="item">
+  <p class="date">
     <%=tweet.created_at%>
   </p>
-  <p class="list-group-item-heading">
+  <p class="text">
     <%=tweet.text.html_safe%>
   </p>
 </div>
