datetime from tweet parsed to 'pt-BR' format

--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,6 +1,6 @@
 <div class="item">
   <p class="date">
-    <%=tweet.created_at%>
+    <%=tweet.time%>
   </p>
   <p class="text">
     <%=tweet.text.html_safe%>
